syntax = "proto3";

package hello_world;

option go_package = "./internal/proto";

service BillService {
  rpc CreateBill(CreateBillRequest) returns (CreateBillResponse) {}
  rpc GetBill(GetBillRequest) returns (GetBillResponse) {}
  rpc ReadBills(ReadBillsRequest) returns (ReadBillsResponse) {}
  rpc UpdateBill(UpdateBillRequest) returns (UpdateBillResponse) {}
  rpc DeleteBill(DeleteBillRequest) returns (DeleteBillResponse) {}
}

message Bill {
  string id = 1;
  bool state = 2;
  string title = 3;
  float sum = 4;
  uint32 currency = 5;
}

message CreateBillRequest {
  Bill bill = 1;
}

message CreateBillResponse {
  Bill bill = 1;
}

message GetBillRequest{
  string id = 1;
}

message GetBillResponse{
  Bill bill = 1;
}
message ReadBillsRequest{

}

message ReadBillsResponse{
  repeated Bill bills = 1;
}

message UpdateBillRequest{
  Bill bill = 1;
}

message UpdateBillResponse{
  Bill bill = 1;
}

message DeleteBillRequest{
  string id = 1;
}

message DeleteBillResponse{
  bool success = 1;
}